[CSS] Fix buttons in dark mode.

--- a/style/css/f4inx.css
+++ b/style/css/f4inx.css
@@ -543,14 +543,14 @@ a.reversefootnote {
   padding-right: calc(2em - 5px);
   border: solid black 5px;  /* To make both buttons equal width. */
   border-radius: 999px;
-  color: white;
-  background: black;
+  color: var(--bg-color);
+  background: var(--fg-color);
 }
 .pagination-item:hover,
 .pagination-item.hover-test {
-  color: black;
-  background: white;
-  border: solid black 5px;
+  color: var(--fg-color);
+  background: var(--bg-color);
+  border: solid var(--fg-color) 5px;
   text-decoration: none;
 }
 
@@ -583,6 +583,24 @@ a.reversefootnote {
   .dark-mode-invert {
     background: unset;
     filter: invert();
+  }
+  /* Buttons have reversed shape in dark mode. */
+  .pagination-item {
+    color: var(--fg-color);
+    background: var(--bg-color);
+    border: solid var(--fg-color) 5px;
+    text-decoration: none;
+  }
+  .pagination-item:hover,
+  .pagination-item.hover-test {
+    padding-top: calc(0.5em - 5px);
+    padding-bottom: calc(0.5em - 5px);
+    padding-left: calc(2em - 5px);
+    padding-right: calc(2em - 5px);
+    border: solid black 5px;  /* To make both buttons equal width. */
+    border-radius: 999px;
+    color: var(--bg-color);
+    background: var(--fg-color);
   }
 }
 
